fix(lottoTickets): change getAllLottoNumbers response to immutability List